--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://DenysBorysiuk.github.io/test-obliksoft",
+  "homepage": "https://DenysBorysiuk.github.io/test-obliksoft-api",
   "name": "test-obliksoft",
   "version": "0.1.0",
   "private": true,
