--- a/db/tasks.json
+++ b/db/tasks.json
@@ -1,7 +1,32 @@
 [
-  { "id": "0", "text": "Learn HTML and CSS", "completed": true },
-  { "id": "1", "text": "Get good at JavaScript", "completed": true },
-  { "id": "2", "text": "Master React", "completed": false },
-  { "id": "3", "text": "Discover Redux", "completed": false },
-  { "id": "4", "text": "Build amazing apps", "completed": false }
+  {
+    "id": "0",
+    "text": "Learn HTML and CSS",
+    "completed": true
+  },
+  {
+    "id": "1",
+    "text": "все працює охуенно",
+    "completed": true
+  },
+  {
+    "id": "2",
+    "text": "Master React",
+    "completed": false
+  },
+  {
+    "id": "3",
+    "text": "Discover Redux",
+    "completed": false
+  },
+  {
+    "id": "4",
+    "text": "Build amazing apps",
+    "completed": false
+  },
+  {
+    "id": "wBkc-9F4-xfbAaiGd5pAg",
+    "text": "sadadadasdasdasdsadasd",
+    "complete": false
+  }
 ]
